--- a/src/components/general/pairing/MonsterPairs.astro
+++ b/src/components/general/pairing/MonsterPairs.astro
@@ -1,27 +1,20 @@
 ---
-export const prerender = true;
 
 import { getCollection, type CollectionEntry } from "astro:content";
 import type { ComponentProps } from "astro/types";
 
-import { z, type ZodError } from "zod";
+import { type ZodError } from "zod";
 import { ulid } from "ulidx";
 import GridDisplay from "../gridDisplay/gridDisplay.astro";
 type GridDisplayProps = ComponentProps<typeof GridDisplay>;
 
 import {
-  ConflictArray,
-  type ConflictArrayType,
   GeneralArray,
   type GeneralArrayType,
-  generalConflicts,
   GeneralElement,
   type GeneralElementType,
-  generalUseCase,
   ClassEnum,
-  type ConflictDatumType,
-ConflictDatum,
-} from "@schemas/index.ts";
+} from "@schemas/index";
 
 const DEBUG = false;
 
@@ -29,7 +22,6 @@ const table_name = `${Astro.url.pathname}-${ulid()}`
 
 let allGeneralsJson = "";
 let allGenerals = new Array<GeneralElementType>();
-
 
 const generalObjects: CollectionEntry<"generals">[] =
   await getCollection("generals");
