these are none of them functional, but I am tired of chasing old code paths because they exist still

--- a/src/components/general/pairing/SiegeAttackPairs.astro
+++ b/src/components/general/pairing/SiegeAttackPairs.astro
@@ -1,55 +1,34 @@
 ---
+
 import { getCollection, type CollectionEntry } from "astro:content";
+import type { ComponentProps } from "astro/types";
 
-import { z, type ZodError } from "zod";
-import { TypeSelector } from "./TypeSelector.ts";
-import { InvestmentSelector } from "./InvestmentSelector.ts";
-import { PairingTable } from "./table.ts";
-import {
-  type generalInvestment,
-  type generalTypeAndUse,
-  primaryInvestmentMap,
-  secondaryInvestmentMap,
-  typeAndUseMap,
-} from "./selectionStore.ts";
-
-import {
-  conflictingGenerals,
-  conflictRecords,
-} from "./ConflictingSkillExcludes.ts";
-
-import { allGenerals, generalPairs } from "./generals.ts";
+import { type ZodError } from "zod";
+import { ulid } from "ulidx";
+import GridDisplay from "../gridDisplay/gridDisplay.astro";
+type GridDisplayProps = ComponentProps<typeof GridDisplay>;
 
 import {
   GeneralArray,
   type GeneralArrayType,
-  generalConflicts,
   GeneralElement,
   type GeneralElementType,
   ClassEnum,
-  generalUseCase
 } from "@schemas/index";
-
-import { Book, type BookType } from "@schemas/bookSchemas.ts";
-
-import {
-  ConflictArray,
-  type ConflictArrayType,
-} from "@schemas/conflictSchemas.ts";
-
-import { PairingPage } from "./index";
 
 const DEBUG = false;
 
-const dataUrl = new URL("/generals/all.json", Astro.url);
-const conflictData = new URL("/generalConflictData/conflicts.json", Astro.url);
+const table_name = `${Astro.url.pathname}-${ulid()}`
 
 let allGeneralsJson = "";
+let allGenerals = new Array<GeneralElementType>();
+
 const generalObjects: CollectionEntry<"generals">[] =
   await getCollection("generals");
+
 if (generalObjects !== null && generalObjects !== undefined) {
   let generalIterator = generalObjects.values();
-  let allGenerals = new Array<GeneralElementType>();
+
   for (const v of generalIterator) {
     const validation = GeneralElement.safeParse(v.data);
     if (validation.success) {
@@ -57,123 +36,40 @@ if (generalObjects !== null && generalObjects !== undefined) {
         allGenerals.push(validation.data);
       }
     } else {
-      console.error(`bad validation ${validation.error}`);
+      console.error(`bad validation ${validation.error.message}`);
     }
   }
   allGeneralsJson = JSON.stringify(allGenerals);
 }
 
-let result:
-  | { success: true; data: GeneralArrayType | ConflictArrayType }
+let aresult:
+  | { success: true; data: GeneralArrayType }
   | { success: false; error: ZodError } = GeneralArray.safeParse(
   JSON.parse(allGeneralsJson)
 );
-let allGeneralsData: string | null = null;
-if (result.success) {
+if (aresult.success ) {
   if (DEBUG) console.log(`validation passed`);
-  if (result.data !== undefined && result.data !== null) {
-    if (DEBUG) console.log(`and has data`);
-    allGeneralsData = JSON.stringify(result.data);
+  if(! (aresult.data !== undefined && aresult.data !== null && aresult.data.length > 1)) {
+    console.error(`but I have no data`);
   }
 } else {
-  console.error(result.error);
+  console.error(aresult.error);
 }
 
-let allConflictJson = "";
-const collectionArray: CollectionEntry<"generalConflictData">[] =
-  await getCollection("generalConflictData");
-if (collectionArray !== null && collectionArray !== undefined) {
-  let result = collectionArray.map((ca) => {
-    const validation = generalConflicts.safeParse(ca.data);
-    if (validation.success) {
-      return validation.data;
-    } else {
-      console.error(`bad validation ${validation.error}`);
-    }
-  });
-  allConflictJson = JSON.stringify(result);
-}
-
-result = ConflictArray.safeParse(JSON.parse(allConflictJson));
-let allConflictData: string | null = null;
-if (result.success) {
-  if (result.data !== undefined && result.data !== null) {
-    allConflictData = JSON.stringify(result.data);
-  }
-} else {
-  console.error(result.error);
-}
 ---
 
-<script>
-  import {
-    primaryInvestmentMap,
-    secondaryInvestmentMap,
-    typeAndUseMap,
-    pickType,
-    pickUseCase,
-  } from "./selectionStore";
-  import {ClassEnum, generalUseCase} from "../../../schemas"
-  import { allGenerals, generalPairs } from "./generals";
-  import {
-    conflictingGenerals,
-    conflictRecords,
-  } from "./ConflictingSkillExcludes";
-  import { map, atom } from "nanostores";
-
-  class Stores extends HTMLElement {
-    private stores = [
-      allGenerals,
-      generalPairs,
-      conflictingGenerals,
-      conflictRecords,
-      typeAndUseMap,
-      primaryInvestmentMap,
-      secondaryInvestmentMap,
-    ];
-
-    constructor() {
-      super();
-      for (let ns in this.stores) {
-        this.stores[ns].subscribe((ms) => {
-          //console.log(`subscribe for ${ns}`);
-        });
-      }
-      
-      const allGeneralsData = this.dataset.agd;
-      const allConflictData = this.dataset.acd;
-
-      if (allGeneralsData !== null && allGeneralsData !== undefined) {
-        allGenerals.set(JSON.parse(allGeneralsData));
-      } else {
-        //console.log(`dataset agd was null or undefined`);
-      }
-
-      if (allConflictData !== null && allConflictData !== undefined) {
-        conflictRecords.set(JSON.parse(allConflictData));
-      } else {
-        //console.log(`dataset acd was null or undefined`);
-      }
-    }
-  }
-  customElements.define("astro-stores", Stores);
-</script>
-{
-  allGeneralsData && allConflictData && (
-    <astro-stores data-acd={allConflictData} data-agd={allGeneralsData} />
-  )
-}
+<div class="table-container">
+  <GridDisplay 
+    name={table_name} 
+    allGenerals={allGenerals} 
+    
+  ></GridDisplay>
+</div>
 
 <style>
-  .sp-table-container {
+  .table-container {
     display: block;
     flex: 2 0 auto;
-    min-height: calc(var(--spectrum-global-dimension-size-6000) * 2);
+    
   }
 </style>
-
-<div class="sp-table-container">
-  <InvestmentSelector generalRole="primary" client:only="lit" />
-  <InvestmentSelector generalRole="secondary" client:only="lit" />
-  <PairingTable type={ClassEnum.enum.Siege} use={generalUseCase.enum.Attack} client:only="lit" />
-</div>
