--- a/src/components/general/gridDisplay/gridDisplay.astro
+++ b/src/components/general/gridDisplay/gridDisplay.astro
@@ -134,30 +134,33 @@ const pairsData: (GeneralPairType[] | string)[] = await Promise.all(
     const v1 = GeneralElement.safeParse(tg);
     if (v1.success) {
       const g1 = v1.data.general;
-      const pairUrl = new URL(`/generalPairs/${g1.name}-${g1.score_as}.json`, Astro.url)
-      if (DEBUG) console.log(`url is ${pairUrl.toString()}`)
+      const pairUrl = new URL(
+        `/generalPairs/${g1.name}-${g1.score_as}.json`,
+        Astro.url,
+      );
+      if (DEBUG) console.log(`url is ${pairUrl.toString()}`);
       const response = await fetch(pairUrl);
       //const response = null;
       if (response !== null && response.ok) {
-        if (DEBUG) console.log(`responce was ok`)
+        if (DEBUG) console.log(`responce was ok`);
         const j: GeneralPairType[] = await response.json();
         const validation = z.array(GeneralPair).safeParse(j);
         if (validation.success) {
           return validation.data;
         } else {
           console.log(
-            `pair type validation failed: ${validation.error.message}`
+            `pair type validation failed: ${validation.error.message}`,
           );
           return "";
         }
       } else {
         return "";
       }
-    }  else {
-      console.log(`allGenerals has invalid general in it.`)
+    } else {
+      console.log(`allGenerals has invalid general in it.`);
     }
     return "";
-  })
+  }),
 );
 
 for (const pd of pairsData.flat()) {
@@ -168,58 +171,59 @@ for (const pd of pairsData.flat()) {
 }
 ---
 
-<div
-  id={name}
-  class="spectrum-Table-scroller spectrum-Table spectrum-Table--sizeM spectrum-Table--emphasized"
-  style="height: 600px"
->
-  <div class="spectrum-Table-main" role="table">
-    <div class="spectrum-Table-head" role="rowgroup">
-      <div role="row">
-        <div class="spectrum-Table-headCell" role="columnheader">
-          <span class="spectrum-Table-columnTitle">Index</span>
-        </div>
-        <div
-          class:list={["spectrum-Table-headCell", "is-sortable"]}
-          role="columnheader"
-          aria-sort="descending"
-          tabindex="0"
-        >
-          <span class="spectrum-Table-columnTitle">Primary General</span>
-        </div>
-        <div
-          class="spectrum-Table-headCell"
-          role="columnheader"
-          aria-sort="none"
-          tabindex="0"
-        >
-          <span class="spectrum-Table-columnTitle">Assistant General </span>
+<div class="spectrum spectrum--medium ">
+  <div
+    id={name}
+    class="spectrum-Table-scroller spectrum-Table spectrum-Table--sizeM spectrum-Table--emphasized"
+    style="height: 600px"
+  >
+    <div class="spectrum-Table-main" role="table">
+      <div class="spectrum-Table-head" role="rowgroup">
+        <div role="row">
+          <div class="spectrum-Table-headCell" role="columnheader">
+            <span class="spectrum-Table-columnTitle">Index</span>
+          </div>
+          <div
+            class:list={["spectrum-Table-headCell", "is-sortable"]}
+            role="columnheader"
+            aria-sort="descending"
+            tabindex="0"
+          >
+            <span class="spectrum-Table-columnTitle">Primary General</span>
+          </div>
+          <div
+            class="spectrum-Table-headCell"
+            role="columnheader"
+            aria-sort="none"
+            tabindex="0"
+          >
+            <span class="spectrum-Table-columnTitle">Assistant General </span>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="spectrum-Table-body" role="rowgroup">
-      {
-        pairs.length > 0 &&
-          pairs.map(
-            (pi, index) =>
-              pi && (
-                <div class="spectrum-Table-row" role="rowgroup">
-                  <div class="spectrum-Table-cell" role="cell">
-                    {index}
+      <div class="spectrum-Table-body" role="rowgroup">
+        {
+          pairs.length > 0 &&
+            pairs.map(
+              (pi, index) =>
+                pi && (
+                  <div class="spectrum-Table-row" role="rowgroup">
+                    <div class="spectrum-Table-cell" role="cell">
+                      {index}
+                    </div>
+                    <div class="spectrum-Table-cell" role="cell">
+                      {pi ? pi.primary.name : `${index} not present `}
+                    </div>
+                    <div class="spectrum-Table-cell" role="cell">
+                      {pi ? pi.secondary.name : `${index} not present`}
+                    </div>
                   </div>
-                  <div class="spectrum-Table-cell" role="cell">
-                    {pi ? pi.primary.name : `${index} not present `}
-                  </div>
-                  <div class="spectrum-Table-cell" role="cell">
-                    {pi ? pi.secondary.name : `${index} not present`}
-                  </div>
-                </div>
-              )
-          )
-      }
+                ),
+            )
+        }
+      </div>
     </div>
   </div>
 </div>
-
 <style></style>
